--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #networking
   httpp: ^0.0.7
+  # data persistence 
+  sqflite: ^2.0.3+1
+  shared_preferences: ^2.0.15
+  path:
+  path_provider: ^2.0.11
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
