--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_staggered_grid_view: 
   #networking
   httpp: ^0.0.7
   # data persistence 
@@ -41,7 +42,11 @@ dependencies:
   path:
   path_provider: ^2.0.11
 
-
+## firebase depedencies
+firebase_core: ^1.21.1
+firebase_auth: ^3.7.0
+google_sign_in: ^5.4.1
+flutter_facebook_auth: ^4.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
