--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: 
+  fluttertoast: ^8.0.9
   #networking
   httpp: ^0.0.7
   # data persistence 
@@ -41,12 +42,15 @@ dependencies:
   shared_preferences: ^2.0.15
   path:
   path_provider: ^2.0.11
+  firebase_auth: ^3.7.0
+  firebase_core: ^1.21.1
 
 ## firebase depedencies
 firebase_core: ^1.21.1
 firebase_auth: ^3.7.0
 google_sign_in: ^5.4.1
 flutter_facebook_auth: ^4.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
