--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,28 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: 
   fluttertoast: ^8.0.9
+
+
   #networking
-  httpp: ^0.0.7
+  firebase_core: 
+  httpp: 
+  firebase_auth: 
+ 
+  sqflite: 
+  path_provider: 
+
+  ## state management
+
+flutter bloc:
+
+
+
   # data persistence 
   sqflite: ^2.0.3+1
   shared_preferences: ^2.0.15
   path:
   path_provider: ^2.0.11
-  firebase_auth: ^3.7.0
-  firebase_core: ^1.21.1
+  
 
 ## firebase depedencies
 firebase_core: ^1.21.1
@@ -74,9 +87,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/Icons/
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
