--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,13 @@ dependencies:
 
 
   #networking
-  firebase_core: 
+  firebase_core: 1.21.1
   httpp: 
-  firebase_auth: 
+  firebase_auth: 3.7.0
  
   sqflite: 
   path_provider: 
+  google_sign_in: ^5.4.1
 
   ## state management
 
@@ -88,7 +89,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/Icons/
+    - assets/icons/
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
