--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: 
   fluttertoast: ^8.0.9
-
-
+  google_fonts: ^3.0.1
+  flutter_bloc: ^8.1.1
   #networking
   firebase_core: 1.21.1
   httpp: 
