--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
   flutter_bloc: ^8.1.1
+  lottie: ^1.4.2
   #networking
   firebase_core: 1.21.1
   httpp: 
